--- a/BreastCancer/breast_cancer_save.ipynb
+++ b/BreastCancer/breast_cancer_save.ipynb
@@ -109,16 +109,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0 loss: 1.207785725593567\n",
-      "Epoch: 25 loss: 0.35102003812789917\n",
-      "Epoch: 50 loss: 0.2726804316043854\n",
-      "Epoch: 75 loss: 0.2601933479309082\n"
+      "Epoch: 0 loss: 12.046308517456055\n",
+      "Epoch: 25 loss: 0.5782279968261719\n",
+      "Epoch: 50 loss: 0.3796072006225586\n",
+      "Epoch: 75 loss: 0.3323605954647064\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x25ea72c24a0>"
+       "<keras.callbacks.History at 0x2196c7b25f0>"
       ]
      },
      "execution_count": 6,
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 198ms/step\n",
+      "1/1 [==============================] - 0s 121ms/step\n",
       "[[ True]]\n"
      ]
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,10 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<keras.engine.sequential.Sequential object at 0x000002196B4D79A0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classifier)"
+   ]
   }
  ],
  "metadata": {
