--- a/Autos/autos_cross_validation.ipynb
+++ b/Autos/autos_cross_validation.ipynb
@@ -334,7 +334,7 @@
    ],
    "source": [
     "regressor = KerasRegressor(build_fn=createNetwork, epochs=100, batch_size=300)\n",
-    "results = cross_val_score(estimator=regressor, X=previsorsEncoded, y=real_price, cv=10, scoring='neg_mean_squared_error',  n_jobs=-1)"
+    "results = cross_val_score(estimator=regressor, X=previsorsEncoded, y=-real_price, cv=10, scoring='neg_mean_absolute_error',  n_jobs=-1)"
    ]
   },
   {
