--- a/BreastCancer/breast_cancer_single.ipynb
+++ b/BreastCancer/breast_cancer_single.ipynb
@@ -157,10 +157,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 4, 6, -1]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def targetSum(nums: list, target: int) -> list:\n",
+    "    output = set()\n",
+    "    for i in range(len(nums)):\n",
+    "        for j in range(i+1, len(nums)):\n",
+    "            if nums[i] + nums[j] == target:\n",
+    "                output.add(nums[i])\n",
+    "                output.add(nums[j])\n",
+    "\n",
+    "    return list(output)\n",
+    "\n",
+    "targetSum([3,5,4,-4,8,11,-1,6], 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isPhotoAble(rawblackUniformHeights: list, rawOrangeUniformHeights: list) -> bool:\n",
+    "\n",
+    "    blackUniformHeights = rawblackUniformHeights.copy()\n",
+    "    orangeUniformHeights = rawOrangeUniformHeights.copy()  \n",
+    "    photoSet = set()\n",
+    "    keep = True\n",
+    "\n",
+    "    while len(blackUniformHeights) > 0 and keep:\n",
+    "        if min(blackUniformHeights) < min(orangeUniformHeights):\n",
+    "            photoSet.add((min(blackUniformHeights),min(orangeUniformHeights)))\n",
+    "            blackUniformHeights.remove(min(blackUniformHeights))\n",
+    "            orangeUniformHeights.remove(min(orangeUniformHeights))\n",
+    "        else:\n",
+    "            keep = False\n",
+    "\n",
+    "    if keep:\n",
+    "        return True\n",
+    "\n",
+    "    keep = True\n",
+    "\n",
+    "    while len(blackUniformHeights) > 0 and keep:\n",
+    "        if min(orangeUniformHeights) < min(blackUniformHeights):\n",
+    "            photoSet.add((min(blackUniformHeights),min(orangeUniformHeights)))\n",
+    "            blackUniformHeights.remove(min(blackUniformHeights))\n",
+    "            orangeUniformHeights.remove(min(orangeUniformHeights))\n",
+    "        else:\n",
+    "            keep = False\n",
+    "\n",
+    "    return keep\n",
+    "    \n",
+    "\n",
+    "isPhotoAble([150,179,149,152,154,180],[162,181,151,160,170,149])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 6, 'b': 1, 'c': 3}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'6a1b3c'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def encode(chars: str) -> str:\n",
+    "    output = {}\n",
+    "\n",
+    "    for char in chars:\n",
+    "        if char not in output.keys():\n",
+    "            output[char] = 1\n",
+    "        else:\n",
+    "            output[char] += 1\n",
+    "    print(output)\n",
+    "    return \"\".join([str(output[char]) + char for char in output.keys()])\n",
+    "\n",
+    "encode(\"aaaabcccaa\")"
+   ]
   }
  ],
  "metadata": {
